[package]
name = "project_butterfly"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
egui = "0.34.1"
egui-wgpu = { version = "0.34.1", features = ["wayland"] }
winit = "0.31.0-beta.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.1", features = ["serde"] }
anyhow = "1.0.102"
dirs = "6.0.0"
